Fix user menu z-index

--- a/css/includes/components/_global-menu.scss
+++ b/css/includes/components/_global-menu.scss
@@ -39,7 +39,7 @@
 .topbar {
     background-color: $mainmenu-bg;
     color: $mainmenu-fg;
-    z-index: $zindex-fixed;
+    z-index: $zindex-fixed + 1; // +1 to be above breadcrumbs
 
     .btn-ghost-secondary {
         color: rgba($color: $mainmenu-fg, $alpha: 80%);
